--- a/templates/index.html
+++ b/templates/index.html
@@ -90,9 +90,9 @@
         <h1>Bootstrap starter template</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
         <p>
-            <form>{%csrf_token%}</form>
+            <form method="POST" action="/checkout/">{%csrf_token%}</form>
             <input type="hidden" id="sender_hash" name="sender_hash" value="" />
-            <button type="button" name="checkout" value="Pagar" id="checkout"/>
+            <button type="Submit" name="checkout" value="Pagar" id="checkout"/>
         </form>
         </p>
       </div>
