--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,14 @@
                 <h3 class="panel-title">Cartão de Crédito</h3>
               </div>
               <div class="panel-body">
-                  <div class="form-group">
+                  <div class="row" hidden id="errorCartao">
+                     <span>Error nos dados do cartão, verifique se está tudo correto</span>
+                     <span id="errorcode10000">Número do Cartão Inválido</span>
+                     <span id="errorcode10001">Número digitado não tem a quantidade de numeros corretos (16)</span>
+                     <span id="errorcode10002">Data de Expiração inválida</span>
+
+                 </div>
+                  <div class="form-group" id="divnumerocartao">
                       <label for="cardNumber">Numero do Cartão</label>
                       <div class="input-group">
                           <input
@@ -113,31 +120,34 @@
                      <div class="col-xs-3 col-md-3">
                          <div class="form-group" id="dateFilter">
                              <label for="cardExpiry"><span class="hidden-xs">Expiração</span><span class="visible-xs-inline">MÊS</span> EXPIRAÇÃO</label>
-                             <input
+                             <select
                                  id="month"
                                  type="tel"
                                  class="form-control"
                                  name="cardExpiry"
-                                 placeholder="Mês Ano ex: 01 (Incluir Zeros)"
+
                                  autocomplete="cc-exp"
                                  maxlength="2"
-                                 required
-                             />
+                                 required>{%for month in months%}
+                                 <option value="{{month}}">month</option>
+                             </select>
                          </div>
                      </div>
                      <div class="col-xs-4 col-md-4">
                          <div class="form-group" id="dateFilter">
                              <label for="cardExpiry"><span class="hidden-xs">Expiração</span><span class="visible-xs-inline">ANO</span> EXPIRAÇÃO</label>
-                             <input
+                             <select
                                  id="year"
-                                 type="tel"
+                                 type="select"
                                  class="form-control"
                                  name="cardExpiry"
-                                 placeholder="Ano AAAA"
                                  autocomplete="cc-exp"
                                  maxlength="4"
-                                 required
-                             />
+                                 required>
+                                 {%for ano in anos%}
+                                <option value="{{ano}}">{{ano}}</option>
+                                {%endfor%}
+                            </select>
                          </div>
                      </div>
                      <div class="col-xs-5 col-md-5 pull-right">
@@ -159,9 +169,6 @@
                  <div class="row">
                      <button id="checkoutcredit">Pagar com Cartão de Crédito</button>
                  </div>
-                 <div class="row" hidden id="errorCartao">
-                    <span>Error nos dados do cartão, verifique se está tudo correto</span>
-                </div>
               </div>
           </div>
       </div>
@@ -229,7 +236,12 @@ $('#cartaodecreditonum').keypress(function() {
 
 $('#checkoutcredit').click(function(){
 
+    $('#errorcode10000').hide();
+    $('#errorcode10001').hide();
+    $('#errorcode10002').hide();
     $('#errorCartao').hide();
+    $("#divnumerocartao").attr("class","form-group");
+
     PagSeguroDirectPayment.createCardToken({
         cardNumber: $('#cartaodecreditonum').val(),
         cvv: $("#cvv").val(),
@@ -252,8 +264,24 @@ $('#checkoutcredit').click(function(){
                 },
                 error: function(response) {
                     $('#errorCartao').show();
+                    $.each(response, function(key, element) {
+                        alert('key: ' + key + '\n' + 'value: ' + element);
+                    });
                 }
             })
+        },
+        error: function(response) {
+            $('#errorCartao').show();
+            $.each(response['errors'], function(key, element) {
+                $("#errorcode"+key).show()
+                alert('key: ' + key + '\n' + 'value: ' + element);
+                if ((key == "10000") || (key == "10001")) {
+                    $("#divnumerocartao").attr("class","form-group has-error");
+                }
+                if (key == "10002") {
+                    $("#dateFilter").attr("class","form-group has-error")
+                }
+            });
         }
     });
 
