--- a/inicio/templates/index.html
+++ b/inicio/templates/index.html
@@ -130,7 +130,7 @@
     </div><!-- /.container -->
 
 
-</body>
+
 <script type="text/javascript" src="https://stc.sandbox.pagseguro.uol.com.br/pagseguro/api/v2/checkout/pagseguro.directpayment.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script type="text/javascript">
@@ -190,7 +190,7 @@ $('#cartaodecreditonum').keypress(function() {
 
 
 $('#checkoutcredit').click(function(){
-
+    $("#checkoutcredit").attr("disabled","true")
     $('#errorcode10000').hide();
     $('#errorcode10001').hide();
     $('#errorcode10002').hide();
@@ -222,7 +222,7 @@ $('#checkoutcredit').click(function(){
                     window.location.href = "sucesso/";
                 },
                 error: function(response) {
-                    console.log(response);
+                    $("#checkoutcredit").attr("disabled","false")
                     $('#errorCartao').show();
                     $.each(response, function(key, element) {
                         if ((key == "10000") || (key == "10001") || (key = "30400")) {
@@ -239,7 +239,7 @@ $('#checkoutcredit').click(function(){
             })
         },
         error: function(response) {
-            console.log(response);
+            $("#checkoutcredit").attr("disabled","false")
             $('#errorCartao').show();
             $.each(response['errors'], function(key, element) {
                 $("#errorcode"+key).show()
