--- a/inicio/templates/index.html
+++ b/inicio/templates/index.html
@@ -130,9 +130,8 @@
     </div><!-- /.container -->
 
 
-
-<script type="text/javascript" src="https://stc.sandbox.pagseguro.uol.com.br/pagseguro/api/v2/checkout/pagseguro.directpayment.js"></script>
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+{%endblock body%}
+{%block javascript%}
 <script type="text/javascript">
 
 $( document ).ready(function() {
@@ -281,4 +280,4 @@ $(function() {
   $('#dateFilter').on('keydown', '#expdate', function(e){-1!==$.inArray(e.keyCode,[46,8,9,27,13,110,190])||/65|67|86|88/.test(e.keyCode)&&(!0===e.ctrlKey||!0===e.metaKey)||35<=e.keyCode&&40>=e.keyCode||(e.shiftKey||48>e.keyCode||57<e.keyCode)&&(96>e.keyCode||105<e.keyCode)&&e.preventDefault()});
 })
 </script>
-{%endblock%}
+{%endblock javascript%}
