--- a/templates/base.html
+++ b/templates/base.html
@@ -44,14 +44,18 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home</a></li>
-            <li><a href="/historico/">About</a></li>
+            <li class="active" id="lihome"><a href="/">Home</a></li>
+            <li id="lihistorico"><a href="/historico/" >Transações</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
     {%block body%}
-    {%endblock%}
+    {%endblock body%}
     {% bootstrap_javascript %}
+    <script type="text/javascript" src="https://stc.sandbox.pagseguro.uol.com.br/pagseguro/api/v2/checkout/pagseguro.directpayment.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    {%block javascript%}
+    {%endblock javascript%}
 </body>
 </html>
