--- a/inicio/templates/index.html
+++ b/inicio/templates/index.html
@@ -36,7 +36,8 @@
                 <h3 class="panel-title">Boleto Bancario</h3>
               </div>
               <div class="panel-body">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.<button id="checkoutboleto">Pagar com boleto bancário</button>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                <button class="btn btn-default" id="checkoutboleto">Pagar com boleto bancário</button>
               </div>
           </div>
           <div hidden class="panel panel-primary" id="creditCard">
@@ -122,7 +123,7 @@
                      </div>
                  </div>
                  <div class="row">
-                     <button id="checkoutcredit">Pagar com Cartão de Crédito</button>
+                     <button class="btn btn-default" id="checkoutcredit">Pagar com Cartão de Crédito</button>
                  </div>
               </div>
           </div>
@@ -199,6 +200,8 @@ $('#cartaodecreditonum').keypress(function() {
 
 $('#checkoutcredit').click(function(){
     $("#checkoutcredit").disable(true)
+    $("#checkoutcredit").text("Aguarde...")
+    $("#checkoutcredit").attr("class","btn btn-default disabled")
     $('#errorcode10000').hide();
     $('#errorcode10001').hide();
     $('#errorcode10002').hide();
@@ -207,7 +210,7 @@ $('#checkoutcredit').click(function(){
     $('#errorcode30400').hide();
     $('#errorCartao').hide();
     $("#divnumerocartao").attr("class","form-group");
-    $("#divnumerocartao").attr("class","form-group");
+    $("#dateFilter").attr("class","form-group");
     $("#divcvv").attr("class","form-group")
     PagSeguroDirectPayment.createCardToken({
         cardNumber: $('#cartaodecreditonum').val(),
@@ -232,14 +235,18 @@ $('#checkoutcredit').click(function(){
                 error: function(response) {
                     $("#checkoutcredit").disable(false)
                     $('#errorCartao').show();
-                    $.each(response, function(key, element) {
-                        if ((key == "10000") || (key == "10001") || (key = "30400")) {
+                    $("#checkoutcredit").text("Pagar com Cartão de Crédito")
+                    $("#checkoutcredit").attr("class","btn btn-default")
+                    console.log("Resposta 2")
+                    console.log(response)
+                    $.each(response['errors'], function(key, element) {
+                        if (((key == "10000") || (key == "10001")) || (key == "30400")) {
                             $("#divnumerocartao").attr("class","form-group has-error");
                         }
-                        if (key == "10002") {
+                        else if (key == "10002") {
                             $("#dateFilter").attr("class","form-group has-error")
                         }
-                        if ((key == "10004") || (key == "10006")) {
+                        else {
                             $("#divcvv").attr("class","form-group has-error")
                         }
                     });
@@ -247,17 +254,20 @@ $('#checkoutcredit').click(function(){
             })
         },
         error: function(response) {
-            $("#checkoutcredit").attr("disabled","false")
+            $("#checkoutcredit").disable(false)
+            $("#checkoutcredit").text("Pagar com Cartão de Crédito")
+            $("#checkoutcredit").attr("class","btn btn-default")
             $('#errorCartao').show();
             $.each(response['errors'], function(key, element) {
+                console.log(key)
                 $("#errorcode"+key).show()
-                if ((key == "10000") || (key == "10001") || (key = "30400")) {
+                if ((key == 10000) || (key == "10001") || (key == "30400")) {
                     $("#divnumerocartao").attr("class","form-group has-error");
                 }
-                if (key == "10002") {
+                else if (key == "10002") {
                     $("#dateFilter").attr("class","form-group has-error")
                 }
-                if ((key == "10004") || (key == "10006")) {
+                else {
                     $("#divcvv").attr("class","form-group has-error")
                 }
             });
