Final for today

--- a/inicio/templates/sucesso_cartao.html
+++ b/inicio/templates/sucesso_cartao.html
@@ -1,56 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-
-
-      <title>Starter Template for Bootstrap</title>
-{# Load the tag library #}
-{% load bootstrap3 %}
-
-{# Load CSS and JavaScript #}
-{% bootstrap_css %}
-
-    <style>
-    body {
-    padding-top: 50px;
-}
-
-.starter-template {
-    padding: 40px 15px;
-    text-align: center;
-}
-
-
-</style>
-    </head>
-<body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Project name</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home</a></li>
-            <li><a href="/historico/">Transações</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
+{%extends 'base.html'%}{% load bootstrap3 %}
+{%block body%}
     <div class="container">
 
             {# Display django.contrib.messages as Bootstrap alerts #}
@@ -58,12 +7,9 @@
 
       <div class="starter-template">
 
-          <div id="creditCard">Seu pagamento por cartão de crédito foi concluido</div>
+          <div id="boleto"><a href="{{url}}">Seu pagamento no cartão está sendo Processado</div>
       </div>
     </div><!-- /.container -->
 
 
-</body>
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-{% bootstrap_javascript %}
-</html>
+{%endblock body%}
